# sfguide-getting-started-dataengineering-ml-snowpark-python

./: .gitignore  Snowpark_For_Python_DE.ipynb  Snowpark_For_Python_ML.ipynb  connection.json  pyproject.toml
